--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -300,9 +300,9 @@ body {
     
     .number{
         width: 15px;
-        height: 25px;
-        line-height: 25px;
-        font-size: 15px;
+        height: 20px;
+        line-height: 20px;
+        font-size: 14x;
     }
        
     .d-1-4{
